nova_tests/strings/neg/str_builder_neg_use_after_consume.nv
// EXPECT_COMPILE_ERROR D131
//
// Plan 85.1 Ф.3 — негатив: append после consume @as_str().
//
// `@as_str()` помечен `consume` (D131) — после финализации StringBuilder
// недоступен. Повторное использование ловится КОМПИЛЯТОРОМ.

module neg.str_builder_neg_use_after_consume

test "append после as_str — use-after-consume" {
    consume sb = StringBuilder.new()
    sb.append("hello")
    ro _ = sb.into_str()                 // consume
    sb.append(" world")               // ← ОШИБКА D131
}
